[gd_scene load_steps=7 format=3 uid="uid://crptm3tpqf23q"]

[ext_resource type="Script" uid="uid://dwlo11ont4xx0" path="res://Scenes/Menus/MainMenu/main_menu.gd" id="1_behrf"]
[ext_resource type="PackedScene" uid="uid://dw1fjemcs6y66" path="res://Scenes/Areas/Tropical_Area.tscn" id="2_omq0y"]
[ext_resource type="Script" uid="uid://dbq3cpjiqnjdf" path="res://Scenes/Menus/MainMenu/camera_orbiter.gd" id="3_id83c"]
[ext_resource type="Theme" uid="uid://257utgrraxew" path="res://Scenes/Menus/MainMenu/main_menu_button_theme.tres" id="6_0l8wx"]
[ext_resource type="Texture2D" uid="uid://buyvs5rpxo1ah" path="res://Art/Images/TropicalTanks.png" id="9_egttt"]
[ext_resource type="Theme" uid="uid://beq3sqokihu4k" path="res://Art/Themes/menu_theme.tres" id="14_6c6cs"]

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_behrf")

[node name="TropicalArea" parent="." instance=ExtResource("2_omq0y")]
gamemode_type = 3

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.34202, 0.939693, 0, -0.939693, 0.34202, 0, 40, 0)
script = ExtResource("3_id83c")
height = 40.0

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(50, 0, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Center" type="CenterContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("14_6c6cs")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/Center"]
layout_mode = 2

[node name="Title" type="CenterContainer" parent="CanvasLayer/MainMenu/Center/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MainMenu/Center/VBoxContainer/Title"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
texture = ExtResource("9_egttt")
expand_mode = 3
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/Center/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("6_0l8wx")

[node name="StartButton" type="Button" parent="CanvasLayer/MainMenu/Center/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MainMenu/Center/VBoxContainer/VBoxContainer/StartButton"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SettingsButton" type="Button" parent="CanvasLayer/MainMenu/Center/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MainMenu/Center/VBoxContainer/VBoxContainer/SettingsButton"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HowToPlayButton" type="Button" parent="CanvasLayer/MainMenu/Center/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "How To Play"

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MainMenu/Center/VBoxContainer/VBoxContainer/HowToPlayButton"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="QuitButton" type="Button" parent="CanvasLayer/MainMenu/Center/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MainMenu/Center/VBoxContainer/VBoxContainer/QuitButton"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CreditsButton" type="Button" parent="CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -41.0
offset_right = 125.0
grow_vertical = 0
theme = ExtResource("14_6c6cs")
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 15
text = "Credits"

[connection signal="pressed" from="CanvasLayer/MainMenu/Center/VBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/Center/VBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/Center/VBoxContainer/VBoxContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/Center/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/CreditsButton" to="." method="_on_credits_button_pressed"]
